# github-fingerprint

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  requirements.txt  skills-lock.json  smoke_test.py  test_fingerprint.py
.gsd/: CODEBASE.md  CONTEXT.md  DECISIONS.md  DISCUSSION-MANIFEST.json  PROJECT.md  REQUIREMENTS.md
api/: celery_app.py  main.py  proof_status.py  proof_tasks.py  prover_client.py  worker.py
attest/: __init__.py  config.py  signer.py
contracts/: ISP1Verifier.sol  SP1Verifier.sol  deploy-wallet.json  deploy.cjs  deployed-address.txt  package-lock.json  package.json  setup-wallet.cjs  submit-proof.cjs
crawler/: github_api.py
docs/: cycle-count-report.md  failure-modes.md  personality-model.md  zk-research-log.md
py-scoring-ref/: compare.py
scoring/: __init__.py  engine.py  profiles.py
scoring-cli/: Cargo.toml
scoring-core/: Cargo.toml
scoring-cross-compare/: Cargo.toml
scoring-prover-cli/: Cargo.toml
scoring-sp1-core/: Cargo.toml
scoring-sp1-core/src/: date_parser.rs  engine.rs  lib.rs  profiles.rs
scoring-types/: Cargo.toml
scripts/: run-proof-roundtrip.sh
signals/: extractor.py  personality.py
static/: index.html
templates/: 404.html  profile.html
tests/: conftest.py  test_api.py  test_attest.py  test_attestation.py  test_celery.py  test_crawler.py  test_integration.py  test_optin.py  test_personality.py  test_profile.py  test_profile_template.py  test_proof_status.py  test_proof_tasks.py  test_prover_client.py  test_proving_e2e.py  test_scoring.py  test_verifier_contract.cjs  (+1 more)
(+191 files in other folders)
